hphp/hack/test/typecheck/re_prefixed_string/re_prefixed_string.php.exp
File "re_prefixed_string.php", line 18, characters 16-17:
Invalid argument (Typing[4110])
File "re_prefixed_string.php", line 21, characters 43-65:
This is an object of type HH\Lib\Regex\Pattern
File "re_prefixed_string.php", line 15, characters 8-20:
It is incompatible with a string because this is the result of a concatenation
